crates/general/fixtures/invalid/string_number_lexical.zt
007

007.5

00

0123456789

3.

.5

.25

1e

1e+

1e-

1.2.3

0x1F

0xDEAD

0b1010

1_000

1_000_000

3.14_15

--5

---1

1.

2.

3.14.

"\q"

"\p"

"\a"

"\z"

"\uXXXX"

"\u{GGGG}"

"unterminated
